add swagger , get and post data from oralcancer
